# claude-code-adaptive-guard

./: .gitignore  BRAND.md  LICENSE  README.md  requirements-optional.txt  wrangler.jsonc
.github/workflows/: check.yml  release.yml
assets/: README.md
cli/: adaptive-guard  adaptive-guard.bat
config/: default.json
config/profiles/: lenient.json  strict.json
dashboard/: .gitignore  README.md  index.html  kill-port.bat  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.svelte  app.css  main.ts
dashboard/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: decision_context.rs  feedback.rs  install.rs  lib.rs  main.rs  telemetry.rs  tray.rs  watcher.rs
docs/: HOW_IT_WORKS.md  SCORING.md  TROUBLESHOOTING.md
docs/screenshots/: README.md
hooks/: adaptive-guard.sh
hooks/lib/: analyze.py  anchors.py  complexity.py  config.py  depth.py  embedder.py  output.py  structural.py  telemetry.py  transcript.py
launch/: README.md  gif-recipe.md  video-script.md  x-thread.md
scripts/: calibrate.bat  calibrate.sh  dashboard.bat  dashboard.sh  explain.bat  explain.sh  install.bat  install.sh  setup-global.bat  setup-global.sh  stats.bat  stats.sh  uninstall.bat  uninstall.sh
telemetry/: README.md
tests/: test_depth.py
tests/fixtures/: README.md  complex_prompt_deep_response.jsonl  complex_prompt_shallow_response.jsonl  multi_turn_tool_results.jsonl  technical_prompt_shallow_response.jsonl  trivial_prompt.jsonl
(+24 files in other folders)
